# Lox-Interpreter

./: .gitignore  CMakeLists.txt  README.md  Scanner.cpp  Scanner.h
Resources/: Test.txt
Source/: Lox.cpp  Scanner.cpp  Token.cpp  TokenType.cpp  main.cpp
Source/Headers/: Lox.h  Scanner.h  Token.h  TokenType.h
